# Workbench

./: .editorconfig  .env.example  .gitignore  .ignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  ArcaneSweep.ps1  AuraSense.ps1  CONTRIBUTING.md  FamiliarCensus.ps1  FlaskFlush.ps1  GrimoireGit.ps1  GuildGuard.ps1  GuildPartyRequest.ps1  HoardBind.ps1  INDEX.md  IndexRune.ps1  LM_STUDIO_AGENTS_README.md  MAINTAINERS.md  NEW_RECOMMENDATIONS.md  ONBOARDING.md  README.md  RECOMMENDATIONS.md  RUNBOOK.md  Revivify.ps1  ScryPortals.ps1  ScrySecrets.ps1  SeekSpell.ps1  SpellCheck.ps1  WhisperTail.ps1  aas-hive.json  aas-module.json  aas_hub.ps1  aas_task.ps1  aas_tests.ps1  agent_task.ps1  android-env.md  android_task.ps1  audit_agents.ps1  (+23 more)
.github/: CODEOWNERS  dependabot.yml  dependency-review-config.yml  scorecard-policy.json  workflow-matrix-review-checklist.md
Assets/: archive_tester.py  asset_ingestion.py  asset_manager.py  asset_preview.py  asset_search.py  cleanup_assets.py  index_assets.py  license_consolidator.py  map_sibling_repos.py  quick_start_pack.py  size_analysis.py  unreal_organizer.py
CUsersaarogAppDataLocalTemptmpa2nxk80scutover/: fetch_summary.txt  index.json
Tools/: ScreenCaptureUtility.cs  dpi_audit.py  (+9 more)
Trials/DanceBot/: MANIFEST.in  README.md  Wizard101_DanceBot.pyproj  dance_game.py  gui.py  image.py  main.py  properties.py  pyproject.toml
Trials/DanceBot/TCLChanger/: TCLChanger.py
Trials/DanceBot/wizard101_dancebot/: __init__.py  api.py  cli.py  dance_game.py  gui.py  image.py  logger.py  main.py  properties.py  shared.py
(+387 files in other folders)
